# mesh2sdf-fast

./: .gitignore  CMakeLists.txt  README.md  README_zh.md  pyproject.toml  translate_comments.py
example/: analyze_sdf.py  demo.py  demo_2d.py  demo_3d.py  visualize_unprocessed.py
include/mesh2sdf/: common.hpp  distance_transform.hpp  mesh.hpp  plane_cutter.hpp  sdf_generator.hpp
mesh2sdf_fast/: __init__.py  core.py  mesh_loader.py  utils.py
src/: bindings.cpp  distance_transform.cpp  mesh.cpp  plane_cutter.cpp  sdf_generator.cpp
tests/: sample_data.csv  test_mesh.py  test_polygon_support.py  test_sdf_generator.py
